--- a/ios/EventHubLite/Info.plist
+++ b/ios/EventHubLite/Info.plist
@@ -32,7 +32,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -49,5 +49,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MazzardH-Regular.ttf</string>
+		<string>MazzardL-Bold.ttf</string>
+		<string>MazzardM-SemiBold.ttf</string>
+	</array>
 </dict>
 </plist>
