--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/elements": "^2.6.4",
     "@react-navigation/native": "^7.1.17",
@@ -18,11 +19,14 @@
     "axios": "^1.11.0",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-image-picker": "^8.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.12.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
