--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-image-picker": "^8.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-safe-area-context": "^5.6.1",
+    "react-native-safe-area-context": "5.5.1",
     "react-native-screens": "^4.16.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.12.1",
